AM_CPPFLAGS = -I../include $(INC_hot) $(INC_boiler) $(INC_boost) $(INC_mysqlpp) $(INC_mysqlclient)
AM_CXXFLAGS = -fPIC -Wall -fexceptions -frtti
AM_LDFLAGS = 

# Libraries

# Uncomment the following
#lib_LTLIBRARIES = libdoller.la
#libdoller_la_SOURCES = server.cc
#libdoller_la_LIBADD = $(LIB_hot) $(LIB_boiler) $(LIB_boost) $(LIB_mysqlpp) $(LIB_mysqlclient) $(LIB_threads)
